# OCR-First

./: .env_example  .gitignore  Dockerfile  build.bat  pyproject.toml  render.yaml  run.py
app/: __init__.py  __main__.py  config.py
app/routes/: ocr.py  scene_detect.py
app/services/: ocr_service.py  scene_clf.py
example/: example.cpp  example.cs  example.go  example.java  example.js  example.kt  example.php  example.py  example.rb  example.rs
models/: meta.json
